--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,48 @@
-h1{
-    color: blueviolet;
+body
+{
+margin: 0;
+padding: 0;
+}
+section{
+height:100vh;
+background: #ffffff;
+}
+.center-block {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+section:before{
+content: '';
+position: absolute;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+mix-blend-mode: color;
+pointer-events: none;
+}
+video{
+object-fit: cover;
+height: auto;
+width: 100%;
+}
+header {
+    height:180vh;
+    min-height:400px;
+    background-size:cover;
+}
+
+.hidden-spacer {
+    height: 50px;
+    background:  #ffffff;
+}
+.container {
+    display: flex; /* or inline-flex */
+  }
+.d{
+    width: 500px;
+    background-color: brown;
+    height: 300px;
+    margin-left: 30px;
 }
