--- a/css/style2.css
+++ b/css/style2.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css?family=Roboto:100,300,400");
 html {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -715,5 +716,304 @@ section .options .option .label .info .main {
 section .options .option .label .info .sub {
   -webkit-transition-delay: .1s;
           transition-delay: .1s;
+}
+
+body {
+  margin: 0px;
+  text-align: center;
+  padding-top: 43vh;
+  color: #fff;
+  font-family: 'Roboto';
+  font-size: 36px;
+  font-weight: 100;
+  overflow: hidden;
+  -webkit-animation: bg 5s linear infinite;
+          animation: bg 5s linear infinite;
+}
+
+.dropping-texts {
+  display: inline-block;
+  width: 180px;
+  text-align: left;
+  height: 36px;
+  vertical-align: -2px;
+}
+
+.dropping-texts > div {
+  font-size: 0px;
+  opacity: 0;
+  margin-left: -30px;
+  position: absolute;
+  font-weight: 300;
+  -webkit-box-shadow: 0px 60px 25px -20px rgba(0, 0, 0, 0.5);
+          box-shadow: 0px 60px 25px -20px rgba(0, 0, 0, 0.5);
+}
+
+.dropping-texts > div:nth-child(1) {
+  -webkit-animation: roll 5s linear infinite 0s;
+          animation: roll 5s linear infinite 0s;
+}
+
+.dropping-texts > div:nth-child(2) {
+  -webkit-animation: roll 5s linear infinite 1s;
+          animation: roll 5s linear infinite 1s;
+}
+
+.dropping-texts > div:nth-child(3) {
+  -webkit-animation: roll 5s linear infinite 2s;
+          animation: roll 5s linear infinite 2s;
+}
+
+.dropping-texts > div:nth-child(4) {
+  -webkit-animation: roll2 5s linear infinite 3s;
+          animation: roll2 5s linear infinite 3s;
+}
+
+@-webkit-keyframes roll {
+  0% {
+    font-size: 0px;
+    opacity: 0;
+    margin-left: -30px;
+    margin-top: 0px;
+    -webkit-transform: rotate(-25deg);
+            transform: rotate(-25deg);
+  }
+  3% {
+    opacity: 1;
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  5% {
+    font-size: inherit;
+    opacity: 1;
+    margin-left: 0px;
+    margin-top: 0px;
+  }
+  20% {
+    font-size: inherit;
+    opacity: 1;
+    margin-left: 0px;
+    margin-top: 0px;
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  27% {
+    font-size: 0px;
+    opacity: 0.5;
+    margin-left: 20px;
+    margin-top: 100px;
+  }
+  100% {
+    font-size: 0px;
+    opacity: 0;
+    margin-left: -30px;
+    margin-top: 0px;
+    -webkit-transform: rotate(15deg);
+            transform: rotate(15deg);
+  }
+}
+
+@keyframes roll {
+  0% {
+    font-size: 0px;
+    opacity: 0;
+    margin-left: -30px;
+    margin-top: 0px;
+    -webkit-transform: rotate(-25deg);
+            transform: rotate(-25deg);
+  }
+  3% {
+    opacity: 1;
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  5% {
+    font-size: inherit;
+    opacity: 1;
+    margin-left: 0px;
+    margin-top: 0px;
+  }
+  20% {
+    font-size: inherit;
+    opacity: 1;
+    margin-left: 0px;
+    margin-top: 0px;
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  27% {
+    font-size: 0px;
+    opacity: 0.5;
+    margin-left: 20px;
+    margin-top: 100px;
+  }
+  100% {
+    font-size: 0px;
+    opacity: 0;
+    margin-left: -30px;
+    margin-top: 0px;
+    -webkit-transform: rotate(15deg);
+            transform: rotate(15deg);
+  }
+}
+
+@-webkit-keyframes roll2 {
+  0% {
+    font-size: 0px;
+    opacity: 0;
+    margin-left: -30px;
+    margin-top: 0px;
+    -webkit-transform: rotate(-25deg);
+            transform: rotate(-25deg);
+  }
+  3% {
+    opacity: 1;
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  5% {
+    font-size: inherit;
+    opacity: 1;
+    margin-left: 0px;
+    margin-top: 0px;
+  }
+  30% {
+    font-size: inherit;
+    opacity: 1;
+    margin-left: 0px;
+    margin-top: 0px;
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  37% {
+    font-size: 1500px;
+    opacity: 0;
+    margin-left: -1000px;
+    margin-top: -800px;
+  }
+  100% {
+    font-size: 0px;
+    opacity: 0;
+    margin-left: -30px;
+    margin-top: 0px;
+    -webkit-transform: rotate(15deg);
+            transform: rotate(15deg);
+  }
+}
+
+@keyframes roll2 {
+  0% {
+    font-size: 0px;
+    opacity: 0;
+    margin-left: -30px;
+    margin-top: 0px;
+    -webkit-transform: rotate(-25deg);
+            transform: rotate(-25deg);
+  }
+  3% {
+    opacity: 1;
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  5% {
+    font-size: inherit;
+    opacity: 1;
+    margin-left: 0px;
+    margin-top: 0px;
+  }
+  30% {
+    font-size: inherit;
+    opacity: 1;
+    margin-left: 0px;
+    margin-top: 0px;
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  37% {
+    font-size: 1500px;
+    opacity: 0;
+    margin-left: -1000px;
+    margin-top: -800px;
+  }
+  100% {
+    font-size: 0px;
+    opacity: 0;
+    margin-left: -30px;
+    margin-top: 0px;
+    -webkit-transform: rotate(15deg);
+            transform: rotate(15deg);
+  }
+}
+
+@-webkit-keyframes bg {
+  0% {
+    background: #ff0075;
+  }
+  3% {
+    background: #0094ff;
+  }
+  20% {
+    background: #0094ff;
+  }
+  23% {
+    background: #b200ff;
+  }
+  40% {
+    background: #b200ff;
+  }
+  43% {
+    background: #8BC34A;
+  }
+  60% {
+    background: #8BC34A;
+  }
+  63% {
+    background: #F44336;
+  }
+  80% {
+    background: #F44336;
+  }
+  83% {
+    background: #F44336;
+  }
+  100% {
+    background: #F44336;
+  }
+}
+
+@keyframes bg {
+  0% {
+    background: #ff0075;
+  }
+  3% {
+    background: #0094ff;
+  }
+  20% {
+    background: #0094ff;
+  }
+  23% {
+    background: #b200ff;
+  }
+  40% {
+    background: #b200ff;
+  }
+  43% {
+    background: #8BC34A;
+  }
+  60% {
+    background: #8BC34A;
+  }
+  63% {
+    background: #F44336;
+  }
+  80% {
+    background: #F44336;
+  }
+  83% {
+    background: #F44336;
+  }
+  100% {
+    background: #F44336;
+  }
 }
 /*# sourceMappingURL=style2.css.map */
