--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,25 @@
+@import url('https://fonts.googleapis.com/css2?family=Tajawal:wght@300&display=swap');
+
+@import url('https://fonts.googleapis.com/css?family=Montserrat');
+
+*{
+  font-family:'Tajawal', sans-serif;
+ 
+}
 body{
   margin: 0;
   font-size: calc(0.75em + 1vmin);
-  background-color: rgb(241, 225, 225);
+  background-color: #f1f1f1;
+  font-family:'Tajawal', sans-serif;
+
 }
 /* -------- Header --------- */
 header{
-  background-color:cadetblue;
   text-align: center;
+  font-family:'Tajawal', sans-serif;
 
 }
 /* ---------------- Sart of burger menue ----------- */
-
-
-
-
-
 
 
 
@@ -25,19 +30,22 @@ header{
   width: 100%;
   max-width: 100%;
   margin: 0 auto;
-  background-color: cornsilk;
+
 
 }
 
 .header-nav {
-  z-index: 2;
+  z-index: 20;
   position: fixed;
   width:100%;
   height: 40px;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: darkkhaki;
+  background-color: #16282A;
+  color:#d8b397;
+  font-size: 70%;
+  
   
 }
 .header-video {
@@ -46,89 +54,98 @@ header{
   width: 100%;
   display: flex;
   flex-direction: column;
-  background-color: rgb(85, 83, 52);
+  position: relative;
+  z-index: 3;
+ 
+}
+.box {
+  position: absolute;
+}
+.logo-overlay {
+  width: 30px;
+  margin-top:45px ;
+  margin-left: 47%;
+  z-index: 9;
+  background:transparent;
+}
+.menu-overlay{
+  margin-top:45px ;
+  margin-left: 90%;
+  z-index: 9;
 }
 .header-text{
   height: 9px;
   display: flex;
   flex-direction: column;
   background-color: #fff;
+   z-index: 5;
+  font-weight: 400;
+  font-family: Arial;
+  background:transparent;
   
 }
 .text-up {
-  min-height: 4em;
-  background: rgb(0, 161, 255)
-
-  
+  min-height: 4em; 
 }
 
 .text-down {
   min-height: 4em;
 
- 
-}
-
-.text-down p {
-  margin: 0 0 2em;
-  font-size: 150px;
-
-}
-.text-up p {
-  margin: 0 0 2em;
-  font-size: 150px;
-  
 }
 
 .title-row {
   line-height: 0;/* here is maybe the magic you looked for*/
   text-align: center;
-
 }
 
-
-@media (max-width: 675px) {
-  .header-nav {
-    flex-direction: column;
-  }
-    
-  header {
-    text-align: center;
-  }
-  
- 
-}
-@media (max-width: 768px) {
-  .text-down p {
-    margin: 0 0 2em;
-    font-size: 70px;
-  
-  }
-  .text-up p {
-    margin: 0 0 2em;
-    font-size: 70px;
-    
-  }
-  .d1{
-    padding-top: 15px;
-    padding-bottom: 15px;
-  }
-
+svg {
+  display: block;
+  font: 8em 'Montserrat';
+  width: 90%;
+  height: 300px;
+  margin: 0 auto;
+  line-height: 0;
+  z-index: 45678;
+  margin-top: -180px;
 }
 
-@media (max-width: 415px) {
-  .text-down p {
-    margin: 0 0 2em;
-    font-size: 40px;
-  
-  }
-  .text-up p {
-    margin: 0 0 2em;
-    font-size: 40px;
-    
-  }
+.text-copy {
+  fill: none;
+  stroke: white;
+  stroke-dasharray: 6% 29%;
+  stroke-width: 5px;
+  stroke-dashoffset: 0%;
+  animation: stroke-offset 7s infinite linear;
 }
 
+.text-copy:nth-child(1){
+stroke: #331e21;
+animation-delay: -1;
+}
 
+.text-copy:nth-child(2){
+stroke: #d8b397;
+animation-delay: -2s;
+}
+
+.text-copy:nth-child(3){
+stroke: #16282a;
+animation-delay: -3s;
+}
+
+.text-copy:nth-child(4){
+stroke: #333132;
+animation-delay: -4s;
+}
+
+.text-copy:nth-child(5){
+stroke: #162821;
+animation-delay: -5s;
+}
+
+@keyframes stroke-offset{
+100% {stroke-dashoffset: -35%;}
+}
 
 
 /* -------- Body ----------- */
@@ -145,7 +162,6 @@ section{
 }
 .section-1{
   display: flex;
-  background-color: violet;
   width: 100%;
   height: 400px;
   justify-content: center;
@@ -159,7 +175,6 @@ section{
   margin: 0 auto ;
   justify-content: center;
   width: 85%;
-  background-color: yellowgreen;
   max-height: 100%;
 
 }
@@ -171,7 +186,6 @@ section{
   justify-content: center;
   align-items: center;
   text-align: right;
-  background-color: #f1f1f1;
   width: 100%;
   height: 100%;
   max-width: 100%;
@@ -182,11 +196,24 @@ section{
 .s1-d1 p{
 padding:30px;
  margin: 40px;
+ font-size: 30px;
+ margin-bottom: 0px;
+ color:#16282a ;
   
 }
+.s1-d1 small{
+  padding:30px;
+   margin: 40px;
+   font-size: 12px;
+   font-weight: bold;
+   padding-top: 0;
+   margin-top: 0;
+   color:#d8b397;
+    
+  }
 .s1-d2{
   display: flex;
-  background-color: dodgerblue;
+
  align-items: center;
  justify-content: center;
   width: 100%;
@@ -198,11 +225,11 @@ padding:30px;
 .s1-d2 img{
   display: flex; 
   position: relative;
-  margin-top: 320px;
-  width: 250px ;
-  height: 400px;
-  max-height: 400px;
-  max-width:250px;
+  margin-top: 350px;
+  width: 390px ;
+  height: 620px;
+  max-height: 700px;
+  max-width: 400px;
   z-index: 1;
   
 }
@@ -210,6 +237,7 @@ padding:30px;
 @media (max-width: 675px) {
   .container {
     flex-direction: column;
+    height: 1000px;
   }
   .s1-d1{
     height: 50%;
@@ -220,12 +248,25 @@ padding:30px;
   }
   .s1-d2 img {
     display: flex;
+    width: 500px ;
+    height: 400px;
+    max-height: 400px;
+    max-width: 500px;
   }
+  .s1-d1 p{
+    padding:30px;
+     margin: 40px;
+     font-size: 20px;
+     font-weight: 10em ;
+     margin-bottom: 0;
+     
+      
+    }
 }
 /* ------------- section 2 -------------- */
 .section-2{
   display: flex;
-  background-color: rgb(230, 186, 92);
+ background-color: #d8b397;
   width: 100%;
   height: 400px;
   justify-content: center;
@@ -234,9 +275,8 @@ padding:30px;
   flex-direction: column;
   display: flex;
   justify-content: center;
-  align-items: center;
   text-align: right;
-  background-color: #f1f1f1;
+
   width: 100%;
   height: 100%;
   max-width: 100%;
@@ -244,17 +284,23 @@ padding:30px;
  
 }
 .s2-d1 h1{
-  color: #ad4c65;
+  padding-right: 30px;
+  font-size: 50px ;
+  margin: 0;
   z-index: 10;
+  color:white;
 }
 .s2-d1 p{
   padding:30px;
   margin: 40px;
+  font-weight: bold;
+  line-height: 18pt;
+  color: #16282a;
 }
 
 .s2-d2{
   display: flex;
-  background-color: dodgerblue;
+
   align-items: center;
   justify-content: center;
   width: 100%;
@@ -292,7 +338,6 @@ padding:30px;
     z-index: 1;
   }
   .s2-d1 h1{
-    color: #ad4c65;
    
     margin: 0;
   }
@@ -327,9 +372,8 @@ padding:30px;
 /* ------------- section 3 -------------- */
 .section-3{
   display: flex;
-  background-color: rgb(202, 202, 202);
   width: 100%;
-  height: 400px;
+  height: 200px;
   justify-content: center;
 }
 
@@ -338,105 +382,26 @@ padding:30px;
   flex-direction: row-reverse;
   justify-content: center;
   align-items: center;
-  padding-top:30px;
-  color:#fff;
-  font-family:'Roboto';
   font-size:36px;
   font-weight:100;
   overflow:hidden;
-  animation:bg 5s linear infinite;
+
 }
 
-.dropping-texts {
-  display: inline-block;
-  width: 180px;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  height: 36px;
-  vertical-align: -2px; 
-}
-
-.dropping-texts > div {
-  font-size:0px;
-  opacity:0;
-  color: #ad4c65;
-  justify-content: center;
-  align-items: center;
-  position:absolute;
  
-  font-weight:300;   
-  box-shadow: 0px 60px 25px -20px rgba(0,0,0,0.5);
-}
+.section-3 .container h1{
+  color: #16282a;
 
-.dropping-texts > div:nth-child(1) {
-  animation: roll 5s linear infinite 0s;
 }
-.dropping-texts > div:nth-child(2) {
-  animation: roll 5s linear infinite 1s;
-}
-.dropping-texts > div:nth-child(3) {
-  animation: roll 5s linear infinite 2s;
-}
-.dropping-texts > div:nth-child(4) {
-  animation: roll2 5s linear infinite 3s;
-}
-
-@keyframes roll {
-  0% {
-    font-size:0px;
-    opacity:0;
-    margin-left:-30px;
-    margin-top:0px;
-    transform: rotate(-25deg);
+ 
+.section-3 .container span{
+  color:#d8b397;
+  
   }
-  3% {
-    opacity:1;
-    transform: rotate(0deg);
-  }
-  5% {
-    font-size:inherit;
-    opacity:1;
-    margin-left:0px;
-    margin-top:0px;
-  }
-  20% {
-    font-size:inherit;
-    opacity:1;
-    margin-left:0px;
-    margin-top:0px;
-    transform: rotate(0deg);
-  }
-  27% {
-    font-size:0px;
-    opacity:0.5;
-    margin-left:20px;
-    margin-top:100px;
-  }
-  100% {
-    font-size:0px;
-    opacity:0;
-    margin-left:-30px;
-    margin-top:0px;
-    transform: rotate(15deg);
-  }
-}
+  
+  
 
 
-
-@keyframes bg {
-  0% {background: #ddd37a;}
-  3% {background: #c0b577;}
-  20% {background: #f0edd7;}
-  23% {background: #caa889;}
-  40% {background: #d9cddf;}
-  43% {background: #b5bdad;}
-  60% {background: #d5dfca;}
-  63% {background: #d6b2af;}
-  80% {background: #f5cbc8;}
-  83% {background: #d3bebd;}
-  100% {background: #aaa5a5;}
-}
 
 @media (max-width: 1287px) {
 
@@ -450,21 +415,9 @@ padding:30px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-   
-    
+   font-size: 20px;
   }
-  div .dropping-texts {
-    justify-content: center;
-    align-items: center;
 
-  }
-  .dropping-texts {
-    justify-content: center;
-    align-items: center;
-    padding-left: 90px;
-    margin-bottom: 30px;
-  }
-  
   
 }
 
@@ -479,7 +432,7 @@ padding:30px;
 /* ------------- section 4 -------------- */
 .section-4{
   display: flex;
-  background-color: rgb(255, 182, 182);
+  background-color: #16282a;
   width: 100%;
   height: 400px;
   justify-content: center;
@@ -488,30 +441,25 @@ padding:30px;
 .s4-d1{
   display: flex;
   flex-direction: column;
-  background-color: dodgerblue;
   align-items: center;
   justify-content: center;
+
+
   width: 50%;
   height: 100%;
   max-width: 50%;
   max-height: 100%;
  
 }
-.s4-d1 h1{
-  color: #ad4c65;
-  z-index: 10;
-}
-.s4-d1 p{
-  padding:30px;
-  margin: 40px;
-}
+
 .splide{
   background-color: #c0b577;
   justify-content: center;
  display: flex;
- width: 50%;
+ width: 100%;
  align-items: center;
  height: 95%;
+
  
 }
 .splide__slide{
@@ -519,7 +467,7 @@ padding:30px;
   background-color: blue;
   justify-content: center;
   align-items: center;
-  width: 250px;
+  width: 50%;
   height: 95%
 
 }
@@ -528,14 +476,29 @@ padding:30px;
   flex-direction: column;
   display: flex;
   justify-content: center;
-  align-items: center;
+
   text-align: right;
-  background-color: #f1f1f1;
   width: 100%;
   height: 100%;
   max-width: 100%;
   max-height: 100%;
 
+}
+.s4-d2 h1{
+  padding-right: 60px;
+  text-align: right;
+  font-size: 50px ;
+  margin: 0;
+  z-index: 10;
+  color:white;
+
+}
+.s4-d2 p{
+
+  padding-right: 60px;
+  font-weight: bold;
+  line-height: 18pt;
+  color: #d8b397;
 }
 
 @media (max-width: 1287px) {
