--- a/Touq/touq_app/static/css/style.css
+++ b/Touq/touq_app/static/css/style.css
@@ -9,6 +9,7 @@
 }
 body{
   margin: 0;
+  padding: 0;
   font-size: calc(0.75em + 1vmin);
   background-color: white;
   font-family:'Tajawal', sans-serif;
@@ -21,113 +22,6 @@ header{
 
 }
 /* ---------------- Sart of burger menue ----------- */
-/* @keyframes checked-anim {
-  50% {
-      width: 3000px;
-      height: 3000px;
-  }
-  100% {
-      width: 100%;
-      height: 100%;
-      border-radius: 0;
-  }
-}
-@keyframes not-checked-anim {
-  0% {
-      width: 3000px;
-      height: 3000px;
-  }
-}
-#menu li, a {
-  margin: 75px 0 -55px 0;
-  color: #03A9F4; 
-  font: 14pt "Roboto", sans-serif;
-  font-weight: 700;
-  line-height: 1.8;
-  text-decoration: none;
-  text-transform: none;
-  list-style: none;
-  outline: 0;
-  display: none;
-}
-#menu li {
-  width: 230px;
-  text-indent: 56px;}
-#menu a:focus {
-  display: block;
-  color: #333;
-  background-color: #eee;
-  transition: all .5s;
-}
-
-#trigger, #burger, #burger:before, #burger:after {
-  position: absolute;
-  top: 25px;
-  left: 25px;
-  background: #03A9F4;
-  width: 30px;
-  height: 5px;
-  transition: .2s ease;
-  cursor: pointer;
-  z-index: 1;
-}
-#trigger {
-  height: 25px;
-  background: none;
-}
-#burger:before {
-  content: " ";
-  top: 10px;
-  left: 0;
-}
-#burger:after {
-  content: " ";
-  top: 20px;
-  left: 0;
-}
-#menu-toggle:checked + #trigger + #burger {
-  top: 35px;
-  transform: rotate(180deg);
-  transition: transform .2s ease;
-}
-
-#menu-toggle:checked + #trigger + #burger:before {
-  width: 20px;
-  top: -2px;
-  left: 18px;
-  transform: rotate(45deg) translateX(-5px);
-  transition: transform .2s ease;
-}
-#menu-toggle:checked + #trigger + #burger:after {
-  width: 20px;
-  top: 2px;
-  left: 18px;
-  transform: rotate(-45deg) translateX(-5px);
-  transition: transform .2s ease;
-}
-#menu {
-  position: absolute;
-  margin: 0; padding: 0;
-  width: 110px;
-  height: 110px;
-  background-color: #fff;
-  border-bottom-right-radius: 100%;
-  box-shadow: 0 2px 5px rgba(0,0,0,0.26);
-  animation: not-checked-anim .2s both;
-  transition: .2s;
-}
-#menu-toggle:checked + #trigger + #burger + #menu {
-  animation: checked-anim 1s ease both;
-}
-#menu-toggle:checked + #trigger ~ #menu > li, a {
-  display: block;
-}
-[type="checkbox"]:not(:checked), [type="checkbox"]:checked {
-  display: none;
-}
-
-
-*/
 
 /* --------------------End of hamburger menue ----------*/
 .header-container {
@@ -149,7 +43,22 @@ header{
   background-color: #16282A;
   color:#d8b397;
   font-size: 70%;
+  text-decoration: none;
   
+  
+}
+h6 a{
+
+  text-decoration: none;
+  color: #7c6552;
+  font-weight: bolder;
+  
+}
+h6 a:hover{
+
+  text-decoration: none;
+  color: #f5f2f0;
+  font-weight: bolder;
   
 }
 .nav-fixed {
@@ -184,54 +93,28 @@ header{
   z-index: 9;
   width: 100%;
   justify-content: center;
-  align-items: center;
+  align-items: center; 
 }
 .logo{
   display: flex;
-  justify-content: center;
-  align-items: center;
+  /* justify-content: center;
+  align-items: center; */
  margin: 3px;
   width:54px;
  height: 60px;
 
 }
-.menu-overlay{
+ .menu-overlay{
   margin-top:105px ;
   display: flex;
   z-index: 9;
   width: 100%;
-  background-color:transparent;
-  justify-content: center;
-  align-items: center;
-}
-.menu-overlay ul{
-  display: flex;
-  justify-content: center;
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
 
+  
 }
-.menu-overlay li{
-  display: inline;
 
 
-}
-.menu-overlay li a{
-  overflow: hidden;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
- 
 
-}
-.menu-overlay li a:hover{
- font-weight: bolder;
-  color: #162821;
-
-}
 .header-text{
   height: 9px;
   display: flex;
@@ -355,7 +238,7 @@ section{
 .s1-d1 p{
 padding:30px;
  margin: 40px;
- font-size: 30px;
+ font-size: 90px;
  margin-bottom: 0px;
  color:#16282a ;
   
@@ -414,9 +297,9 @@ padding:30px;
   }
   .s1-d1 p{
     padding:30px;
-     margin: 40px;
-     font-size: 20px;
-     font-weight: 10em ;
+    margin: 40px;
+    font-size: 20px;
+    font-weight: 10em ;
      margin-bottom: 0;
      
       
@@ -557,10 +440,6 @@ padding:30px;
   color:#d8b397;
   
   }
-  
-  
-
-
 
 @media (max-width: 1287px) {
 
